@startuml

class Classe {
    int CodeClasse
    string NomClasse
    int? CodeGroupe
    int? CodeDepartement
    }
    
class Departement {
    int CodeDepartement
    string NomDepartement
}

class Groupe {
    int CodeGroupe
    string NomGroupe
}

class Enseignant {
    int CodeEnseignant
    string Nom
    string Prenom
    DateTime DateRecrutement
    string? Adresse
    string? Mail
    string? Tel
    int CodeDepartement
    int CodeGrade
}

class Etudiant {
    int CodeEtudiant
    string Nom
    string Prenom
    DateTime DateNaissance
    string? NumInscription
    string? Adresse
    string? Mail
    string? Tel
    int? CodeClasse
}

class FicheAbsence {
    int CodeFicheAbsence
    DateTime DateJour
    int CodeMatiere
    int CodeEnseignant
    int CodeClasse
}

class FicheAbsenceSeance {
    int CodeFicheAbsenceSeance
    int CodeFicheAbsence
    int CodeSeance
}

class Grade {
    int CodeGrade
    string NomGrade
}

class LigneFicheAbsence {
    int CodeLigneFicheAbsence
    int CodeEtudiant
    int CodeFicheAbsenceSeance
    bool IsAbsent
}

class Matiere {
    int CodeMatiere
    string NomMatiere
    int NbreHeureCoursParSemaine
    int NbreHeureTDParSemaine
    int NbreHeureTPParSemaine
}

class Seance {
    int CodeSeance
    string NomSeance
    TimeSpan HeureDebut
    TimeSpan HeureFin
}

class User {
    int CodeUser
    string Username
    string Password
    string? Role
}

User "1" -- "*" Enseignant : has
User "1" -- "*" Etudiant : has

Departement "1" -- "*" Classe : contains
Departement "1" -- "*" Enseignant : employs

Groupe "1" -- "*" Classe : organizes

Classe "1" -- "*" Etudiant : contains
Classe "1" -- "*" FicheAbsence : records

Enseignant "1" -- "*" FicheAbsence : assigns

FicheAbsence "1" -- "*" FicheAbsenceSeance : schedules

FicheAbsenceSeance "1" -- "*" LigneFicheAbsence : logs

Etudiant "1" -- "*" LigneFicheAbsence : attends

Grade "1" -- "*" Enseignant : has

Matiere "1" -- "*" FicheAbsence : involves

Seance "1" -- "*" FicheAbsenceSeance : includes

@enduml
